# kraken-data-recorder

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  asset.cpp  asset.hpp  book.cpp  book.hpp  cert.cpp  cert.hpp  ci.conan.txt  conanfile.py  conanfile.txt  config.cpp  config.hpp  constants.hpp  decimal.cpp  decimal.hpp  engine.cpp  engine.hpp  level_book.cpp  level_book.hpp  main.cpp  metrics.cpp  pair.cpp  pair.hpp  parquet.cpp  parquet.hpp  processor.cpp  processor.hpp  record.cpp  record.hpp  requests.cpp  requests.hpp  requirements.txt  responses.cpp  responses.hpp  session.cpp  (+3 more)
.github/workflows/: cmake-single-platform.yml
base/: asset.cpp  asset.hpp  concepts.hpp  config.cpp  config.hpp  constants.hpp  decimal.cpp  decimal.hpp  engine.cpp  engine.hpp  extract.hpp  level_book.cpp  level_book.hpp  metrics.cpp  metrics.hpp  pair.cpp  pair.hpp  parquet.cpp  refdata.cpp  refdata.hpp  requests.cpp  requests.hpp  responses.cpp  responses.hpp  session.cpp  session.hpp  sink.hpp  types.hpp
codegen/: asset.json  asset_status.json  enum_code.j2  enum_header.j2  model_code.j2  model_header.j2  pair.json  side.json  types.j2
docker/: Dockerfile  conan.profile.default
include/: book.hpp  config.hpp  constants.hpp  decimal.hpp  engine.hpp  header.hpp  instrument.hpp  level_book.hpp  metrics.hpp  refdata.hpp  requests.hpp  responses.hpp  session.hpp  shmem_names.hpp  shmem_sink.hpp  sides.hpp  sink.hpp  timestamp.hpp  trades.hpp  types.hpp
jinja2/: enum_code.j2  enum_header.j2  model_code.j2  model_header.j2  types.j2
kdr_observe/: kdr_observe.cpp
kdr_record/: kdr_record.cpp
kp_record/: kp_record.cpp
model/: asset.json  depth.json  ord_type.json  pair_status.json  pong.json  trade.json
parquet/: assets_sink.cpp  assets_sink.hpp  book_sink.cpp  book_sink.hpp  io.hpp  pairs_sink.cpp  pairs_sink.hpp  parquet.cpp  parquet.hpp  reader.hpp  trade_sink.cpp  trade_sink.hpp  writer.hpp
parquet/include/: assets_sink.hpp  book_sink.hpp  pairs_sink.hpp  trade_sink.hpp
parquet/src/: assets_sink.cpp  book_sink.cpp  pairs_sink.cpp  trade_sink.cpp
src/: book.cpp  config.cpp  decimal.cpp  engine.cpp  header.cpp  instrument.cpp  level_book.cpp  metrics.cpp  refdata.cpp  requests.cpp  responses.cpp  session.cpp  shmem_sink.cpp  sides.cpp  timestamp.cpp  trades.cpp  types.cpp
test/: check_book.cpp  parse_instrument_snapshot.cpp
test/data/: instrument_snapshot.json
test/unit/: asset_test.cpp  config_test.cpp  decimal_test.cpp  json_test.cpp  level_book_test.cpp  parquet_test.cpp  response_test.cpp  timestamp_test.cpp
